[gd_scene load_steps=8 format=3 uid="uid://bgsar1tiqfojd"]

[ext_resource type="PackedScene" uid="uid://0k42bfpsjrnw" path="res://Systems/Power/power_source.tscn" id="1_34abb"]
[ext_resource type="Script" path="res://Entities/PowerSystem/Battery/battery_entity.gd" id="1_ik67y"]
[ext_resource type="PackedScene" uid="uid://be6ku3jhhiqe5" path="res://Systems/Power/power_receiver.tscn" id="2_4aqoh"]
[ext_resource type="Texture2D" uid="uid://bcbm0goi1n4r" path="res://Assets/tileset.png" id="3_iqw7i"]
[ext_resource type="Shader" path="res://Entities/PowerSystem/Battery/battery_indicator.gdshader" id="5_horsm"]
[ext_resource type="Texture2D" uid="uid://16q5fj3fitig" path="res://Assets/battery_indicator.png" id="5_k23vy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dx1f6"]
resource_local_to_scene = true
shader = ExtResource("5_horsm")
shader_parameter/amount = 0.0

[node name="BatteryEntity" type="StaticBody2D" groups=["power_receivers", "power_sources"]]
script = ExtResource("1_ik67y")
type = 1

[node name="PowerSource" parent="." instance=ExtResource("1_34abb")]
unique_name_in_owner = true
power_amount = 200.0
output_direction = 4

[node name="PowerReceiver" parent="." instance=ExtResource("2_4aqoh")]
unique_name_in_owner = true
power_required = 200.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("3_iqw7i")
region_enabled = true
region_rect = Rect2(340, 120, 100, 100)

[node name="IndicatorSprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_dx1f6")
position = Vector2(-24, -18)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_k23vy")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-50, 1, -50, -9, 0, -35, 50, -8, 50, 0, 0, 26)
